--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,11 @@ cmake_minimum_required(VERSION 3.16)
 set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(msbuildtocmake LANGUAGES CXX VERSION 0.1)
+project(MsBuildConvertToCMake LANGUAGES CXX VERSION 0.1)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include(FetchContent)
-include(CTest)
-
-FetchContent_Declare(
-        gtest
-        GIT_REPOSITORY https://github.com/google/googletest.git
-        GIT_TAG v1.14.0
-)
 
 FetchContent_Declare(
         tinyxml
